--- a/configs/config_local.json
+++ b/configs/config_local.json
@@ -1,6 +1,6 @@
 {
  "env_select":"simple_river",
- "adapter_select": ["Language"],
+ "adapter_select": ["default","language"],
  "training_action_cap": 100,
  "testing_action_cap":100,
  "reward_signal": [0.5,0,-0.1],
