--- a/configs/config.json
+++ b/configs/config.json
@@ -20,21 +20,8 @@
             "epsilon": 0.2,
             "epsilon_step":0.01
             },
-        "Neural_Q":{
+        "DQN":{
                 "sequence_size": 1,
-                "input_size": 768,
-                "output_size": 1000,
-                "seq_hidden_dim": 10,
-                "hidden_dim": 128,
-                "num_hidden": 2,
-                "memory_size": 2000,
-                "epsilon": 0.2,
-                "epsilon_step":0.01
-            },
-        "Neural_Q_language":{
-                "sequence_size": 2,
-                "input_size": 384,
-                "output_size": 1000,
                 "seq_hidden_dim": 10,
                 "hidden_dim": 128,
                 "num_hidden": 2,
